--- a/hugo.toml
+++ b/hugo.toml
@@ -26,7 +26,7 @@ theme = 'stack'
   [languages.en]
     title = "Danabases"
     keywords = ""
-    copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
+    copyright = 'Danabases'
     readOtherPosts = "Read other posts"
 
 #  [languages.en.params]
